# nit-slack-analytics

./: .all-contributorsrc  Cargo.toml  README.md
src/: channels.rs  lib.rs  main.rs  members.rs  members_data_calc.rs  members_data_io.rs  members_data_table.rs  members_struct.rs  util.rs
tests/: channels.rs  members.rs
tests/data/: channels-all-time.json  members-all-time.json
