[package]
name = "nit_slack_data"
version = "0.1.0"
authors = ["Adam Recvlohe <adam.recvlohe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
prettytable-rs = "^0.8"
